--- a/.github/workflows/remove-milestone.yml
+++ b/.github/workflows/remove-milestone.yml
@@ -10,10 +10,10 @@ on:
       version_call:
         description: Needs to match, exactly, the name of a milestone
         required: true
-        type: string    
+        type: string
     secrets:
       token:
-        required: true        
+        required: true
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -23,7 +23,7 @@ jobs:
         with:
           repository: "grafana/grafana-github-actions"
           path: ./actions
-          ref: main
+          ref: mob/bump-version-update-user-essentials
       - name: Install Actions
         run: npm install --production --prefix ./actions
       - name: Remove milestone from open issues (manually invoked)
