--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           repository: "grafana/grafana-github-actions"
           path: ./actions
-          ref: mob/bump-version-update-user-essentials
+          ref: main
       - name: Install Actions
         run: npm install --production --prefix ./actions
       - name: Run update changelog (manually invoked)
