--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -43,7 +43,9 @@
     "@react-aria/focus": "3.5.0",
     "@react-aria/menu": "3.3.0",
     "@react-aria/overlays": "3.7.2",
+    "@react-aria/tooltip": "3.1.3",
     "@react-stately/menu": "3.2.3",
+    "@react-stately/tooltip": "3.0.5",
     "@sentry/browser": "6.15.0",
     "ansicolor": "1.1.95",
     "calculate-size": "1.1.1",
