Fusebit: Add fusebit-build-image.yml to trigger GitHub Actions

--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,9 +1,5 @@
 name: Backport PR Creator
-on:
-  pull_request_target:
-    types:
-      - closed
-      - labeled
+on: workflow_dispatch
 
 jobs:
   main:
