--- a/packages/grafana-runtime/package.json
+++ b/packages/grafana-runtime/package.json
@@ -27,7 +27,8 @@
     "@grafana/ui": "8.0.7",
     "history": "4.10.1",
     "systemjs": "0.20.19",
-    "systemjs-plugin-css": "0.1.37"
+    "systemjs-plugin-css": "0.1.37",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
     "@grafana/tsconfig": "^1.0.0-rc1",
