--- a/packages/grafana-e2e/package.json
+++ b/packages/grafana-e2e/package.json
@@ -55,6 +55,7 @@
     "execa": "4.0.0",
     "resolve-as-bin": "2.1.0",
     "ts-loader": "6.2.1",
+    "tslib": "2.3.1",
     "typescript": "4.3.4",
     "yaml": "^1.8.3"
   },
