--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -74,6 +74,7 @@
     "react-transition-group": "4.4.1",
     "slate": "0.47.8",
     "tinycolor2": "1.4.1",
+    "tslib": "2.3.1",
     "uplot": "1.6.15"
   },
   "devDependencies": {
