--- a/packages/jaeger-ui-components/package.json
+++ b/packages/jaeger-ui-components/package.json
@@ -40,6 +40,7 @@
     "react-icons": "2.2.7",
     "recompose": "^0.25.0",
     "tinycolor2": "1.4.1",
+    "tslib": "2.3.1",
     "tween-functions": "^1.2.0"
   },
   "volta": {
