--- a/package.json
+++ b/package.json
@@ -267,7 +267,7 @@
     "baron": "3.0.3",
     "brace": "0.11.1",
     "calculate-size": "1.1.1",
-    "centrifuge": "2.8.4",
+    "centrifuge": "centrifugal/centrifuge-js#a24c1992d4e0bcdb4ba9006947f157d588838260",
     "classnames": "2.3.1",
     "clipboard": "2.0.4",
     "comlink": "4.3.1",
