chore(checks): skip draft PRs

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
     steps:
       - name: Checkout Actions
         uses: actions/checkout@v2
