chore(makefile): try cypress image

--- a/.drone.yml
+++ b/.drone.yml
@@ -189,15 +189,6 @@ steps:
   image: grafana/build-container:1.4.8
   name: package
 - commands:
-  - yarn run cypress install
-  depends_on:
-  - package
-  image: grafana/ci-e2e:12.19.0-1
-  name: cypress
-  volumes:
-  - name: cypress_cache
-    path: /root/.cache/Cypress
-- commands:
   - ./e2e/start-server
   depends_on:
   - package
@@ -208,44 +199,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -667,44 +650,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -1378,44 +1353,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -1927,44 +1894,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -2452,44 +2411,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -2975,44 +2926,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -3603,44 +3546,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -4101,44 +4036,36 @@ steps:
   name: end-to-end-tests-server
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-dashboards-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-smoke-tests-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-panels-suite
   volumes:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
-  depends_on:
-  - cypress
   environment:
     HOST: end-to-end-tests-server
-  image: grafana/ci-e2e:12.19.0-1
+  image: cypress/browsers:chrome67
   name: end-to-end-tests-various-suite
   volumes:
   - name: cypress_cache
@@ -4539,6 +4466,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: dd4acd4d9a3c87a66abc68a0fc815cf08d334507f9f5df7265a186df1a8410a9
+hmac: 6234940438afad9e475258606112c792acbc68bbbe511eb73c151a8fd804c15f
 
 ...
