chore(makefile): try cypress image

--- a/.drone.yml
+++ b/.drone.yml
@@ -198,6 +198,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
   environment:
     HOST: end-to-end-tests-server
@@ -207,6 +208,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite
   environment:
     HOST: end-to-end-tests-server
@@ -216,6 +218,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite
   environment:
     HOST: end-to-end-tests-server
@@ -225,6 +228,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite
   environment:
     HOST: end-to-end-tests-server
@@ -649,6 +653,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
   environment:
     HOST: end-to-end-tests-server
@@ -658,6 +663,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite
   environment:
     HOST: end-to-end-tests-server
@@ -667,6 +673,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite
   environment:
     HOST: end-to-end-tests-server
@@ -676,6 +683,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite
   environment:
     HOST: end-to-end-tests-server
@@ -1352,6 +1360,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1361,6 +1370,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1370,6 +1380,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1379,6 +1390,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1893,6 +1905,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1902,6 +1915,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1911,6 +1925,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -1920,6 +1935,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2410,6 +2426,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2419,6 +2436,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2428,6 +2446,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2437,6 +2456,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2925,6 +2945,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2934,6 +2955,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2943,6 +2965,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -2952,6 +2975,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -3545,6 +3569,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -3554,6 +3579,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -3563,6 +3589,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -3572,6 +3599,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -4035,6 +4063,7 @@ steps:
   image: grafana/build-container:1.4.8
   name: end-to-end-tests-server
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -4044,6 +4073,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite smoke-tests-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -4053,6 +4083,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite panels-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -4062,6 +4093,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - apt-get install netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite various-suite --tries 3
   environment:
     HOST: end-to-end-tests-server
@@ -4466,6 +4498,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 6234940438afad9e475258606112c792acbc68bbbe511eb73c151a8fd804c15f
+hmac: 83f0c0380414ae4ea8d1bba7e12212f650b95c8cea4ecb7e1db577d3e970027c
 
 ...
